--- a/index.html
+++ b/index.html
@@ -6,38 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Verônica Paranhos</title>
     <link rel="shortcut icon" href="img/foto-perfil.jpeg">
-    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
+    <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js" data-auto-replace-svg="nest"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav>
-            <div>
-                <ul>
-                    <li>
-                        <a href="#formacao">Formação</a>
-                    </li>
-                    <li>
-                        <a href="#portfolio">Portfólio</a>
-                    </li>
-                    <li>
-                        <a href="#contato">Contato</a>
-                    </li>
-                </ul>
-            </div>
+            <ul>
+                <li>
+                    <a href="#formacao">Formação</a>
+                </li>
+                <li>
+                    <a href="#apresentacao">Portfólio</a>
+                </li>
+                <li>
+                    <a href="#contatos">Contato</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
     <main>
-       <section>
+       <section id="apresentacao">
             <div>
-                <img src="img/foto-perfil.jpeg" alt="Foto de perfil"">
+                <img src="img/foto-perfil.jpg" alt="Foto de perfil" id="foto">
             </div>
             <div>
                 <h1>Verônica Paranhos</h1>
                 <h2>Desenvolvedora Front-end</h2>
             </div>
-            <div>
+            <div id="apresentacao-texto">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
                 Sunt itaque aut architecto minima voluptatibus sint porro fuga provident perferendis odio, 
                 aspernatur cupiditate a laborum perspiciatis.
@@ -45,12 +43,12 @@
        </section>
        <section id="formacao">
         <div>
-            Formação
+            <h2>Formação</h2>
         </div>
         <div>
             <ul>
                 <li>
-                    <p>Ciclo Formativo Básico</p>
+                    <h3>Ciclo Formativo Básico</h3>
                     <a href="https://www.pretalab.com/formacao" target="_blank">PretaLab</a>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
@@ -59,8 +57,8 @@
                     </p>
                 </li>
                 <li>
-                    <p>Comunicação Social - Produção Editorial - UFRJ</p>
-                    <a href="https://www.pretalab.com/formacao" target="_blank">UFRJ</a>
+                    <h3>Comunicação Social - Produção Editorial - UFRJ</h3>
+                    <a href="#" target="_blank">UFRJ</a>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
                         Sunt itaque aut architecto minima voluptatibus sint porro fuga provident perferendis odio, 
@@ -70,14 +68,14 @@
             </ul>
         </div>
        </section>
-       <section id="projeto">
+       <section id="projetos">
             <div>
-                Meus projetos
+                <h2>Meus projetos</h2>
             </div>
             <div>
                 <ul>
                     <li>
-                        <p>Calculadora</p>
+                        <h3>Calculadora</h3>
                         <a href="#" target="_blank">Calculadora em JavaScript</a>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
@@ -86,7 +84,7 @@
                         </p>
                     </li>
                     <li>
-                        <p>Projeto pessoal com React</p>
+                        <h3>Projeto pessoal com React</h3>
                         <a href="#" target="_blank">Projeto em React</a>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
@@ -100,23 +98,22 @@
     </main>
 
     <footer>
-        <div id="contato">
+        <div id="contatos">
             <ul>
                 <li>
-                    <i class="fas fa-envelope-square"></i>
+                    <i class="fa-solid fa-square-envelope fa-2xl"></i>
                     <a href="mailto:veronicahp@gmail.com">veronicahp@gmail.com</a>
                 </li>
 
                 <li>
-                    <i class="fab fa-linkedin"></i>
+                    <i class="fa-brands fa-linkedin fa-2xl"></i>                    
                     <a href="https://www.linkedin.com/in/veronicahp/" target="_blank">Verônica Paranhos</a>
                 </li>
                 <li>
-                    <i class="fab fa-github-square"></i>
+                    <i class="fab fa-github-square fa-2xl"></i>
                     <a href="https://github.com/Veronicahp" target="_blank">Veronicahp</a>
                 </li>
             </ul>
-
         </div>
     </footer>
 </body>
