--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </li>
                 <li>
                     <h3>Comunicação Social - Produção Editorial - UFRJ</h3>
-                    <a href="#" target="_blank">UFRJ</a>
+                    <a href="https://eco.ufrj.br/" target="_blank">UFRJ</a>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
                         Sunt itaque aut architecto minima voluptatibus sint porro fuga provident perferendis odio, 
