--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="#formacao">Formação</a>
                 </li>
                 <li>
-                    <a href="#apresentacao">Portfólio</a>
+                    <a href="#projetos">Portfólio</a>
                 </li>
                 <li>
                     <a href="#contatos">Contato</a>
@@ -33,14 +33,16 @@
             </div>
             <div>
                 <h1>Verônica Paranhos</h1>
-                <h2>Desenvolvedora Front-end</h2>
+                <h2>Estudante de Front-end e Back-end</h2>
             </div>
             <div id="apresentacao-texto">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
-                Sunt itaque aut architecto minima voluptatibus sint porro fuga provident perferendis odio, 
-                aspernatur cupiditate a laborum perspiciatis.
+                Formada em Comunicação Social, hoje estou em transição de carreira para a área de TI.
+                Atualmente participo do Segundo Ciclo Formativo Básico da PretaLab.
+                Sou apaixonada por Ruby e Python.<br> 
+                E busco me tornar uma desenvolvedora Full Stack.
             </div>
        </section>
+
        <section id="formacao">
         <div>
             <h2>Formação</h2>
@@ -51,23 +53,22 @@
                     <h3>Ciclo Formativo Básico</h3>
                     <a href="https://www.pretalab.com/formacao" target="_blank">PretaLab</a>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
-                        Sunt itaque aut architecto minima voluptatibus sint porro fuga provident perferendis odio, 
-                        aspernatur cupiditate a laborum perspiciatis.
+                        Curso básico de HTML 5, CSS3, JavaScript e React.
+                        É um curso que engloba o desenvolvimento do conhecimento técnico, autogestão e soft skills das estudantes.
                     </p>
                 </li>
                 <li>
-                    <h3>Comunicação Social - Produção Editorial - UFRJ</h3>
+                    <h3>Comunicação Social - UFRJ</h3>
                     <a href="https://eco.ufrj.br/" target="_blank">UFRJ</a>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
-                        Sunt itaque aut architecto minima voluptatibus sint porro fuga provident perferendis odio, 
-                        aspernatur cupiditate a laborum perspiciatis.
+                    Formada em Produção Editorial, trabalhei como coordenadora editorial, produtora gráfica, designer e diagramadora.
+                    Atualmente sigo como diagramadora freelance, produzindo livros e e-books.
                     </p>
                 </li>
             </ul>
         </div>
        </section>
+
        <section id="projetos">
             <div>
                 <h2>Meus projetos</h2>
