Atualizando cores e texto

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <div id="apresentacao-texto">
                 Formada em Comunicação Social, hoje estou em transição de carreira para a área de TI.
                 Atualmente participo do Segundo Ciclo Formativo Básico da PretaLab.
-                Sou apaixonada por Ruby e Python.<br> 
+                Fiz um ano de Análise e Desenvolvimento de Sistemas, mas optei por me especializar em uma área.
+                Sou apaixonada por Ruby e Python. 
                 E busco me tornar uma desenvolvedora Full Stack.
             </div>
        </section>
@@ -54,7 +55,7 @@
                     <a href="https://www.pretalab.com/formacao" target="_blank">PretaLab</a>
                     <p>
                         Curso básico de HTML 5, CSS3, JavaScript e React.
-                        É um curso que engloba o desenvolvimento do conhecimento técnico, autogestão e soft skills das estudantes.
+                        É um curso que engloba, além do desenvolvimento do conhecimento técnico, autogestão e soft skills.
                     </p>
                 </li>
                 <li>
@@ -62,13 +63,13 @@
                     <a href="https://eco.ufrj.br/" target="_blank">UFRJ</a>
                     <p>
                     Formada em Produção Editorial, trabalhei como coordenadora editorial, produtora gráfica, designer e diagramadora.
-                    Atualmente sigo como diagramadora freelance, produzindo livros e e-books.
+                    Atualmente sigo como diagramadora freelance de livros e e-books.
                     </p>
                 </li>
             </ul>
         </div>
        </section>
-
+       <hr>
        <section id="projetos">
             <div>
                 <h2>Meus projetos</h2>
