Atualizando user github

--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
             <ul>
                 <li>
                     <i class="fa-solid fa-square-envelope fa-2xl"></i>
-                    <a href="mailto:veronicahp@gmail.com">veronicahp@gmail.com</a>
+                    <a href="mailto:veronicahp@gmail.com">Email</a>
                 </li>
 
                 <li>
                     <i class="fa-brands fa-linkedin fa-2xl"></i>                    
-                    <a href="https://www.linkedin.com/in/veronicahp/" target="_blank">Verônica Paranhos</a>
+                    <a href="https://www.linkedin.com/in/veronicahp/" target="_blank">Linkedin</a>
                 </li>
                 <li>
                     <i class="fab fa-github-square fa-2xl"></i>
-                    <a href="https://github.com/Veronicahp" target="_blank">Veronicahp</a>
+                    <a href="https://github.com/veronicaparanhos" target="_blank">Github</a>
                 </li>
             </ul>
         </div>
