Atualizando quase tudo

--- a/index.html
+++ b/index.html
@@ -1,122 +1,140 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio Verônica Paranhos</title>
-    <link rel="shortcut icon" href="img/foto-perfil.jpeg">
-    <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js" data-auto-replace-svg="nest"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="shortcut icon" href="img/foto-perfil.jpeg" />
+    <script
+      src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"
+      data-auto-replace-svg="nest"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header id="header">
-        <nav>
-            <ul>
-                <li>
-                    <a href="#formacao">Formação</a>
-                </li>
-                <li>
-                    <a href="#projetos">Portfólio</a>
-                </li>
-                <li>
-                    <a href="#contatos">Contato</a>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li>
+            <a href="#formacao">Formação</a>
+          </li>
+          <li>
+            <a href="#projetos">Portfólio</a>
+          </li>
+          <li>
+            <a href="#contatos">Contato</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-       <section id="apresentacao">
-            <div>
-                <img src="img/foto-perfil.jpg" alt="Foto de perfil" id="foto">
-            </div>
-            <div>
-                <h1>Verônica Paranhos</h1>
-                <h2>Estudante de Front-end e Back-end</h2>
-            </div>
-            <div id="apresentacao-texto">
-                Formada em Comunicação Social, hoje estou em transição de carreira para a área de TI.
-                Atualmente participo do Segundo Ciclo Formativo Básico da PretaLab.
-                Fiz um ano de Análise e Desenvolvimento de Sistemas, mas optei por me especializar em uma área.
-                Sou apaixonada por Ruby e Python. 
-                E busco me tornar uma desenvolvedora Full Stack.
-            </div>
-       </section>
-
-       <section id="formacao">
+      <section id="apresentacao">
         <div>
-            <h2>Formação</h2>
+          <img src="img/VP_2022.jpg" alt="Foto de perfil" id="foto" />
         </div>
         <div>
-            <ul>
-                <li>
-                    <h3>Ciclo Formativo Básico</h3>
-                    <a href="https://www.pretalab.com/formacao" target="_blank">PretaLab</a>
-                    <p>
-                        Curso básico de HTML 5, CSS3, JavaScript e React.
-                        É um curso que engloba, além do desenvolvimento do conhecimento técnico, autogestão e soft skills.
-                    </p>
-                </li>
-                <li>
-                    <h3>Comunicação Social - UFRJ</h3>
-                    <a href="https://eco.ufrj.br/" target="_blank">UFRJ</a>
-                    <p>
-                    Formada em Produção Editorial, trabalhei como coordenadora editorial, produtora gráfica, designer e diagramadora.
-                    Atualmente sigo como diagramadora freelance de livros e e-books.
-                    </p>
-                </li>
-            </ul>
+          <h1>Verônica Paranhos</h1>
+          <h2>Estudante de Front-end e Back-end</h2>
         </div>
-       </section>
-       <hr>
-       <section id="projetos">
-            <div>
-                <h2>Meus projetos</h2>
-            </div>
-            <div>
-                <ul>
-                    <li>
-                        <h3>Calculadora</h3>
-                        <a href="#" target="_blank">Calculadora em JavaScript</a>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
-                            Sunt itaque aut architecto minima voluptatibus sint porro fuga provident perferendis odio, 
-                            aspernatur cupiditate a laborum perspiciatis.
-                        </p>
-                    </li>
-                    <li>
-                        <h3>Projeto pessoal com React</h3>
-                        <a href="#" target="_blank">Projeto em React</a>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque odit et perferendis! 
-                            Sunt itaque aut architecto minima voluptatibus sint porro fuga provident perferendis odio, 
-                            aspernatur cupiditate a laborum perspiciatis.
-                        </p>
-                    </li>
-                </ul>
-            </div>
-       </section>
+        <div id="apresentacao-texto">
+          Formada em Comunicação Social, hoje estou em transição de carreira
+          para a área de TI. Atualmente participo do Segundo Ciclo Formativo
+          Básico da PretaLab. Fiz um ano de Análise e Desenvolvimento de
+          Sistemas, mas optei por me especializar em uma área. Sou apaixonada
+          por Ruby e Python. E busco me tornar uma desenvolvedora Full Stack.
+        </div>
+      </section>
+      <hr />
+      <section id="formacao">
+        <div>
+          <h2>Formação</h2>
+        </div>
+        <div>
+          <ul>
+            <li>
+              <h3>Ciclo Formativo Básico</h3>
+              <a href="https://www.pretalab.com/formacao" target="_blank"
+                >PretaLab</a
+              >
+              <p>
+                Curso básico de HTML 5, CSS3, JavaScript e React. É um curso que
+                engloba, além do desenvolvimento do conhecimento técnico,
+                autogestão e soft skills.
+              </p>
+            </li>
+            <li>
+              <h3>Comunicação Social - UFRJ</h3>
+              <a href="https://eco.ufrj.br/" target="_blank">UFRJ</a>
+              <p>
+                Formada em Produção Editorial, trabalhei como coordenadora
+                editorial, produtora gráfica, designer e diagramadora.
+                Atualmente sigo como diagramadora freelance de livros e e-books.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <hr />
+      <section id="projetos">
+        <div>
+          <h2>Meus projetos</h2>
+        </div>
+        <div>
+          <ul>
+            <li>
+              <h3>To-Do List</h3>
+              <a href="https://todo-list-veronica.netlify.app" target="_blank"
+                >Projeto em JavaScript</a
+              >
+              <p>
+                Lista de tarefas desenvolvida durante o projeto final do módulo de
+                JavaScript.<br>
+                Professora: Nathally Souza
+              </p>
+            </li>
+            <li>
+              <h3>Projeto pessoal com React</h3>
+              <a href="#" target="_blank">Projeto em React</a>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corrupti itaque odit et perferendis! Sunt itaque aut architecto
+                minima voluptatibus sint porro fuga provident perferendis odio,
+                aspernatur cupiditate a laborum perspiciatis.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <div id="contatos">
-            <ul>
-                <li>
-                    <i class="fa-solid fa-square-envelope fa-2xl"></i>
-                    <a href="mailto:veronicahp@gmail.com">Email</a>
-                </li>
+      <div id="contatos">
+        <ul>
+          <li>
+            <i class="fa-solid fa-square-envelope fa-2xl"></i>
+            <a href="mailto:veronicahp@gmail.com">Email</a>
+          </li>
 
-                <li>
-                    <i class="fa-brands fa-linkedin fa-2xl"></i>                    
-                    <a href="https://www.linkedin.com/in/veronicahp/" target="_blank">Linkedin</a>
-                </li>
-                <li>
-                    <i class="fab fa-github-square fa-2xl"></i>
-                    <a href="https://github.com/veronicaparanhos" target="_blank">Github</a>
-                </li>
-            </ul>
-        </div>
+          <li>
+            <i class="fa-brands fa-linkedin fa-2xl"></i>
+            <a href="https://www.linkedin.com/in/veronicahp/" target="_blank"
+              >Linkedin</a
+            >
+          </li>
+          <li>
+            <i class="fab fa-github-square fa-2xl"></i>
+            <a href="https://github.com/veronicaparanhos" target="_blank"
+              >Github</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
